deploy: marcellogalhardo/marcellogalhardo.dev@6587f9e0c41e6fa549d4d4d106695b162e6bccea

--- a/about/index.html
+++ b/about/index.html
@@ -4,8 +4,7 @@
 <meta http-equiv=x-ua-compatible content="ie=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=author content>
-<meta name=description content="Software engineer with over 5 years of experience with Android. I am a moderator of the Android Dev BR community, the largest network of Android developers in Brazil.
-Contact me  Email: marcello.galhardo@gmail.com Twitter: @marcellogalhard LinkedIn SpeakerDeck  ">
+<meta name=description content="Software engineer with over 6 years of experience with Android. I have been building software professionally since 2012, starting on Web and Backend, later on Desktop, and finally, on Android. I worked with small teams at Quandoo, to dozens of engineers working on the same codebase at N26 and Delivery Hero. At N26, I worked on the Consumer App and later led the Android Platform Team. The apps I worked on had millions of downloads used in more than 20 countries.">
 <meta name=keywords content>
 <meta name=robots content="noodp">
 <meta name=theme-color content>
@@ -16,15 +15,13 @@ About :: Marcello Galhardo — Lead Android Engineer @ N26
 <link href=https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css rel=stylesheet type=text/css>
 <link rel=stylesheet href=/main.de188b3201233c251f4fd6306dbd2cb41e408fb8846c09781b2925de7df5025c.css>
 <meta itemprop=name content="About">
-<meta itemprop=description content="Software engineer with over 5 years of experience with Android. I am a moderator of the Android Dev BR community, the largest network of Android developers in Brazil.
-Contact me  Email: marcello.galhardo@gmail.com Twitter: @marcellogalhard LinkedIn SpeakerDeck  ">
-<meta itemprop=wordCount content="36"><meta itemprop=image content="https://marcellogalhardo.dev/">
+<meta itemprop=description content="Software engineer with over 6 years of experience with Android. I have been building software professionally since 2012, starting on Web and Backend, later on Desktop, and finally, on Android. I worked with small teams at Quandoo, to dozens of engineers working on the same codebase at N26 and Delivery Hero. At N26, I worked on the Consumer App and later led the Android Platform Team. The apps I worked on had millions of downloads used in more than 20 countries.">
+<meta itemprop=wordCount content="107"><meta itemprop=image content="https://marcellogalhardo.dev/">
 <meta itemprop=keywords content>
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://marcellogalhardo.dev/">
 <meta name=twitter:title content="About">
-<meta name=twitter:description content="Software engineer with over 5 years of experience with Android. I am a moderator of the Android Dev BR community, the largest network of Android developers in Brazil.
-Contact me  Email: marcello.galhardo@gmail.com Twitter: @marcellogalhard LinkedIn SpeakerDeck  ">
+<meta name=twitter:description content="Software engineer with over 6 years of experience with Android. I have been building software professionally since 2012, starting on Web and Backend, later on Desktop, and finally, on Android. I worked with small teams at Quandoo, to dozens of engineers working on the same codebase at N26 and Delivery Hero. At N26, I worked on the Consumer App and later led the Android Platform Team. The apps I worked on had millions of downloads used in more than 20 countries.">
 </head>
 <body>
 <div class=container>
@@ -40,7 +37,7 @@ Contact me  Email: marcello.galhardo@gmail.com Twitter: @marcellogalhard LinkedI
 </a>
 <span class=header__right>
 <nav class=menu>
-<ul class=menu__inner><li><a href=/posts/>Posts</a></li><li><a href=/talks>Talks</a></li><li><a href=/about>About</a></li>
+<ul class=menu__inner><li><a href=/posts/>Posts</a></li><li><a href=/talks>Talks</a></li><li><a href=/about>About</a></li><li><a href=/uses>Uses</a></li>
 </ul>
 </nav>
 <span class=menu-trigger><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>
@@ -56,7 +53,8 @@ Contact me  Email: marcello.galhardo@gmail.com Twitter: @marcellogalhard LinkedI
 <article>
 <h2 class=post-title><a href=https://marcellogalhardo.dev/about/>About</a></h2>
 <div class=post-content>
-<p>Software engineer with over 5 years of experience with Android. I am a moderator of the Android Dev BR community, the largest network of Android developers in Brazil.</p>
+<p>Software engineer with over 6 years of experience with Android. I have been building software professionally since 2012, starting on Web and Backend, later on Desktop, and finally, on Android. I worked with small teams at <a href=https://www.quandoo.com>Quandoo</a>, to dozens of engineers working on the same codebase at <a href=https://n26.com>N26</a> and <a href=https://www.deliveryhero.com>Delivery Hero</a>. At <a href=https://n26.com>N26</a>, I worked on the Consumer App and later led the Android Platform Team. The apps I worked on had millions of downloads used in more than 20 countries.</p>
+<p>I am a moderator of the <a href=https://androiddevbr.org>Android Dev BR</a> community, the largest network of Android developers in Brazil.</p>
 <h3 id=contact-me>Contact me</h3>
 <ul>
 <li>Email: <a href=mailto:marcello.galhardo@gmail.com>marcello.galhardo@gmail.com</a></li>
