--- a/uses/index.html
+++ b/uses/index.html
@@ -4,23 +4,24 @@
 <meta http-equiv=x-ua-compatible content="ie=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=author content>
-<meta name=description content>
+<meta name=description content="Hardware  Professional Machine: 2020 13&amp;quot; Macbook Pro Mechanical Keyboard: Keychron K2 Wireless Mechanical Keyboard Apple Magic Mouse  Ergonomics  Chair: JÄRVFJÄLLET  Software  File Manager: Marta Window Manager: Tiles Diagrams: Diagrams IDE: IntelliJ IDEA Daily Planner: Sunsama  ">
 <meta name=keywords content>
 <meta name=robots content="noodp">
 <meta name=theme-color content>
-<link rel=canonical href=https://marcellogalhardo.dev/tags/dagger/>
+<link rel=canonical href=https://marcellogalhardo.dev/uses/>
 <title>
-dagger :: Marcello Galhardo — Lead Android Engineer @ N26
+Uses :: Marcello Galhardo — Lead Android Engineer @ N26
 </title>
 <link href=https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css rel=stylesheet type=text/css>
 <link rel=stylesheet href=/main.de188b3201233c251f4fd6306dbd2cb41e408fb8846c09781b2925de7df5025c.css>
-<meta itemprop=name content="dagger">
-<meta itemprop=description content="Marcello's Personal Blog">
+<meta itemprop=name content="Uses">
+<meta itemprop=description content="Hardware  Professional Machine: 2020 13&#34; Macbook Pro Mechanical Keyboard: Keychron K2 Wireless Mechanical Keyboard Apple Magic Mouse  Ergonomics  Chair: JÄRVFJÄLLET  Software  File Manager: Marta Window Manager: Tiles Diagrams: Diagrams IDE: IntelliJ IDEA Daily Planner: Sunsama  ">
+<meta itemprop=wordCount content="35"><meta itemprop=image content="https://marcellogalhardo.dev/">
+<meta itemprop=keywords content>
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://marcellogalhardo.dev/">
-<meta name=twitter:title content="dagger">
-<meta name=twitter:description content="Marcello's Personal Blog">
-<link rel=alternate type=application/rss+xml href=https://marcellogalhardo.dev/tags/dagger/index.xml title="Marcello Galhardo">
+<meta name=twitter:title content="Uses">
+<meta name=twitter:description content="Hardware  Professional Machine: 2020 13&#34; Macbook Pro Mechanical Keyboard: Keychron K2 Wireless Mechanical Keyboard Apple Magic Mouse  Ergonomics  Chair: JÄRVFJÄLLET  Software  File Manager: Marta Window Manager: Tiles Diagrams: Diagrams IDE: IntelliJ IDEA Daily Planner: Sunsama  ">
 </head>
 <body>
 <div class=container>
@@ -45,24 +46,35 @@ dagger :: Marcello Galhardo — Lead Android Engineer @ N26
 </span>
 </header>
 <div class=content>
-<main class=posts>
-<h1>dagger</h1>
-<div class=posts-group>
-<div class=post-year>2021</div>
-<ul class=posts-list>
-<li class=post-item>
-<a href=https://marcellogalhardo.dev/posts/2021/02/05/n26-path-to-anvil/>
-<span class=post-title>N26 Path to Anvil</span>
-<span class=post-day>
-Feb 5
-</span>
-</a>
-</li>
+<main class=post>
+<div class=post-info>
+</p>
+</div>
+<article>
+<h2 class=post-title><a href=https://marcellogalhardo.dev/uses/>Uses</a></h2>
+<div class=post-content>
+<h3 id=hardware>Hardware</h3>
+<ul>
+<li>Professional Machine: 2020 13" Macbook Pro</li>
+<li>Mechanical Keyboard: <a href=https://www.keychron.com/products/keychron-k2-wireless-mechanical-keyboard>Keychron K2 Wireless Mechanical Keyboard</a></li>
+<li>Apple Magic Mouse</li>
+</ul>
+<h3 id=ergonomics>Ergonomics</h3>
+<ul>
+<li>Chair: <a href=https://www.ikea.com/de/de/p/jaervfjaellet-drehstuhl-gunnared-dunkelgrau-30363594>JÄRVFJÄLLET</a></li>
+</ul>
+<h3 id=software>Software</h3>
+<ul>
+<li>File Manager: <a href=https://marta.sh>Marta</a></li>
+<li>Window Manager: <a href=https://freemacsoft.net/tiles>Tiles</a></li>
+<li>Diagrams: <a href=https://diagrams.app>Diagrams</a></li>
+<li>IDE: <a href=https://www.jetbrains.com/idea>IntelliJ IDEA</a></li>
+<li>Daily Planner: <a href=https://sunsama.com>Sunsama</a></li>
 </ul>
 </div>
-<div class=pagination>
-<div class=pagination__buttons>
-</div>
+</article>
+<hr>
+<div class=post-info>
 </div>
 </main>
 </div>
