--- a/talks/index.html
+++ b/talks/index.html
@@ -1,19 +1,25 @@
-<!doctype html><html lang=en>
+<!doctype html><html lang=en-us>
 <head>
 <meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="ie=edge">
+<meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<meta name=author content>
+<title>Talks - Marcello Galhardo</title>
 <meta name=description content=" April 29, 2021: Anvil na Prática (PT-BR) June 05, 2019: Railway Oriented Programming with Kotlin April 17, 2019: Effective Kotlin March 01, 2019: Modularizing Legacy Apps November 11, 2018: Android Modular Architecture January 24, 2017: Introduction to Dagger 2 January 24, 2017: Introdução ao Dagger 2 (PT-BR) September 06, 2016: SOLID no Android 2 (PT-BR)  ">
-<meta name=keywords content>
-<meta name=robots content="noodp">
-<meta name=theme-color content>
-<link rel=canonical href=https://marcellogalhardo.dev/talks/>
-<title>
-Talks :: Marcello Galhardo — Lead Android Engineer @ N26
-</title>
-<link href=https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css rel=stylesheet type=text/css>
-<link rel=stylesheet href=/main.29c2c8c3fc9cf748254138351f142ac2833b208a68e83aec126edc98b59efef2.css>
+<meta name=author content>
+<link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/app.min.css>
+<link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/an-old-hope.min.css>
+<script defer src=https://marcellogalhardo.dev/highlight.min.js onload=hljs.initHighlightingOnLoad()></script>
+<link rel=preload as=image href=https://marcellogalhardo.dev/theme.png>
+<link rel=icon href=https://marcellogalhardo.dev/favicon.ico>
+<link rel=apple-touch-icon href=https://marcellogalhardo.dev/apple-touch-icon.png>
+<meta name=generator content="Hugo 0.88.1">
+<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-7LK7ENB813','auto'),ga('send','pageview'))</script>
+<script async src=https://www.google-analytics.com/analytics.js></script>
+<meta property="og:title" content="Talks">
+<meta property="og:description" content=" April 29, 2021: Anvil na Prática (PT-BR) June 05, 2019: Railway Oriented Programming with Kotlin April 17, 2019: Effective Kotlin March 01, 2019: Modularizing Legacy Apps November 11, 2018: Android Modular Architecture January 24, 2017: Introduction to Dagger 2 January 24, 2017: Introdução ao Dagger 2 (PT-BR) September 06, 2016: SOLID no Android 2 (PT-BR)  ">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://marcellogalhardo.dev/talks/"><meta property="og:image" content="https://marcellogalhardo.dev/"><meta property="article:section" content>
+<meta property="og:site_name" content="Marcello Galhardo">
 <meta itemprop=name content="Talks">
 <meta itemprop=description content=" April 29, 2021: Anvil na Prática (PT-BR) June 05, 2019: Railway Oriented Programming with Kotlin April 17, 2019: Effective Kotlin March 01, 2019: Modularizing Legacy Apps November 11, 2018: Android Modular Architecture January 24, 2017: Introduction to Dagger 2 January 24, 2017: Introdução ao Dagger 2 (PT-BR) September 06, 2016: SOLID no Android 2 (PT-BR)  ">
 <meta itemprop=wordCount content="55"><meta itemprop=image content="https://marcellogalhardo.dev/">
@@ -22,40 +28,29 @@ Talks :: Marcello Galhardo — Lead Android Engineer @ N26
 <meta name=twitter:image content="https://marcellogalhardo.dev/">
 <meta name=twitter:title content="Talks">
 <meta name=twitter:description content=" April 29, 2021: Anvil na Prática (PT-BR) June 05, 2019: Railway Oriented Programming with Kotlin April 17, 2019: Effective Kotlin March 01, 2019: Modularizing Legacy Apps November 11, 2018: Android Modular Architecture January 24, 2017: Introduction to Dagger 2 January 24, 2017: Introdução ao Dagger 2 (PT-BR) September 06, 2016: SOLID no Android 2 (PT-BR)  ">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7LK7ENB813"></script>
-<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-7LK7ENB813',{anonymize_ip:!1})}</script>
 </head>
-<body>
-<div class=container>
+<body class=not-ready data-menu=true>
 <header class=header>
-<span class=header__inner>
-<a href=/ style=text-decoration:none>
-<div class=logo>
-<span class=logo__mark>></span>
-<span class=logo__text>marcellogalhardo.dev</span>
-<span class=logo__cursor>
-</span>
-</div>
-</a>
-<span class=header__right>
-<nav class=menu>
-<ul class=menu__inner><li><a href=/posts/>Posts</a></li><li><a href=/talks>Talks</a></li><li><a href=/about>About</a></li><li><a href=/uses>Uses</a></li>
-</ul>
-</nav>
-<span class=menu-trigger><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>
-</span>
-</span>
-</span>
-</header>
-<div class=content>
-<main class=post>
-<div class=post-info>
+<p class=logo>
+<a class=site-name href=https://marcellogalhardo.dev/>Marcello Galhardo</a><a class=btn-dark></a>
 </p>
-</div>
-<article>
-<h2 class=post-title><a href=https://marcellogalhardo.dev/talks/>Talks</a></h2>
-<div class=post-content>
-<ul>
+<script>let bodyClx=document.body.classList,btnDark=document.querySelector('.btn-dark'),sysDark=window.matchMedia('(prefers-color-scheme: dark)'),darkVal=localStorage.getItem('dark'),setDark=a=>{bodyClx[a?'add':'remove']('dark'),localStorage.setItem('dark',a?'yes':'no')};setDark(darkVal?darkVal==='yes':sysDark.matches),requestAnimationFrame(()=>bodyClx.remove('not-ready')),btnDark.addEventListener('click',()=>setDark(!bodyClx.contains('dark'))),sysDark.addEventListener('change',a=>setDark(a.matches))</script>
+<nav class=menu>
+<a href=/posts/>Posts</a>
+<a href=/talks>Talks</a>
+<a href=/about>About</a>
+<a href=/uses>Uses</a>
+</nav>
+</header>
+<main class=main>
+<article class=post-single>
+<header class=post-title>
+<p>
+<time>Jan 1, 1</time>
+</p>
+<h1>Talks</h1>
+</header>
+<section class=post-content><ul>
 <li>April 29, 2021: <a href="https://www.youtube.com/watch?v=AVZlStXTJJg">Anvil na Prática (PT-BR)</a></li>
 <li>June 05, 2019: <a href=https://speakerdeck.com/marcellogalhardo/railway-oriented-programming-with-kotlin>Railway Oriented Programming with Kotlin</a></li>
 <li>April 17, 2019: <a href=https://speakerdeck.com/marcellogalhardo/effective-kotlin>Effective Kotlin</a></li>
@@ -65,13 +60,9 @@ Talks :: Marcello Galhardo — Lead Android Engineer @ N26
 <li>January 24, 2017: <a href=https://speakerdeck.com/marcellogalhardo/introducao-ao-dagger-2>Introdução ao Dagger 2 (PT-BR)</a></li>
 <li>September 06, 2016: <a href=https://speakerdeck.com/marcellogalhardo/solid-no-desenvolvimento-android>SOLID no Android 2 (PT-BR)</a></li>
 </ul>
-</div>
+</section>
 </article>
-<hr>
-<div class=post-info>
-</div>
 </main>
-</div>
 <footer class=footer>
 <div class=footer__inner>
 <div class=footer__content>
@@ -80,7 +71,5 @@ Talks :: Marcello Galhardo — Lead Android Engineer @ N26
 </div>
 </div>
 </footer>
-</div>
-<script type=text/javascript src=/bundle.min.599099f1f14b78b657d524b28e10e0c5098e7cd46e9c7aed73d577068a276c3ff1bb234cbf29cb313333e83cf411727b43157c91ce5b809e2ffc81664614608e.js integrity="sha512-WZCZ8fFLeLZX1SSyjhDgxQmOfNRunHrtc9V3BoonbD/xuyNMvynLMTMz6Dz0EXJ7QxV8kc5bgJ4v/IFmRhRgjg=="></script>
 </body>
 </html>
