deploy: marcellogalhardo/marcellogalhardo.dev@c471c43361bcc5369ddf5601e550d59def03c1f6

--- a/talks/index.html
+++ b/talks/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<title>Talks - Marcello Galhardo</title>
+<title>Talks - Marcello</title>
 <meta name=description content=" April 29, 2021: Anvil na Prática (PT-BR) June 05, 2019: Railway Oriented Programming with Kotlin April 17, 2019: Effective Kotlin March 01, 2019: Modularizing Legacy Apps November 11, 2018: Android Modular Architecture January 24, 2017: Introduction to Dagger 2 January 24, 2017: Introdução ao Dagger 2 (PT-BR) September 06, 2016: SOLID no Android 2 (PT-BR)  ">
 <meta name=author content>
 <link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/app.min.css>
@@ -19,7 +19,7 @@
 <meta property="og:description" content=" April 29, 2021: Anvil na Prática (PT-BR) June 05, 2019: Railway Oriented Programming with Kotlin April 17, 2019: Effective Kotlin March 01, 2019: Modularizing Legacy Apps November 11, 2018: Android Modular Architecture January 24, 2017: Introduction to Dagger 2 January 24, 2017: Introdução ao Dagger 2 (PT-BR) September 06, 2016: SOLID no Android 2 (PT-BR)  ">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://marcellogalhardo.dev/talks/"><meta property="og:image" content="https://marcellogalhardo.dev/"><meta property="article:section" content>
-<meta property="og:site_name" content="Marcello Galhardo">
+<meta property="og:site_name" content="Marcello">
 <meta itemprop=name content="Talks">
 <meta itemprop=description content=" April 29, 2021: Anvil na Prática (PT-BR) June 05, 2019: Railway Oriented Programming with Kotlin April 17, 2019: Effective Kotlin March 01, 2019: Modularizing Legacy Apps November 11, 2018: Android Modular Architecture January 24, 2017: Introduction to Dagger 2 January 24, 2017: Introdução ao Dagger 2 (PT-BR) September 06, 2016: SOLID no Android 2 (PT-BR)  ">
 <meta itemprop=wordCount content="55"><meta itemprop=image content="https://marcellogalhardo.dev/">
@@ -32,7 +32,7 @@
 <body class=not-ready data-menu=true>
 <header class=header>
 <p class=logo>
-<a class=site-name href=https://marcellogalhardo.dev/>Marcello Galhardo</a><a class=btn-dark></a>
+<a class=site-name href=https://marcellogalhardo.dev/>Marcello</a><a class=btn-dark></a>
 </p>
 <script>let bodyClx=document.body.classList,btnDark=document.querySelector('.btn-dark'),sysDark=window.matchMedia('(prefers-color-scheme: dark)'),darkVal=localStorage.getItem('dark'),setDark=a=>{bodyClx[a?'add':'remove']('dark'),localStorage.setItem('dark',a?'yes':'no')};setDark(darkVal?darkVal==='yes':sysDark.matches),requestAnimationFrame(()=>bodyClx.remove('not-ready')),btnDark.addEventListener('click',()=>setDark(!bodyClx.contains('dark'))),sysDark.addEventListener('change',a=>setDark(a.matches))</script>
 <nav class=menu>
