--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<title>404 Page not found - Marcello Galhardo</title>
+<title>404 Page not found - Marcello</title>
 <meta name=description content>
 <meta name=author content>
 <link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/app.min.css>
@@ -16,7 +16,7 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://marcellogalhardo.dev/404.html"><meta property="og:image" content="https://marcellogalhardo.dev/"><meta property="og:site_name" content="Marcello Galhardo">
+<meta property="og:url" content="https://marcellogalhardo.dev/404.html"><meta property="og:image" content="https://marcellogalhardo.dev/"><meta property="og:site_name" content="Marcello">
 <meta itemprop=name content="404 Page not found">
 <meta itemprop=description content>
 <meta name=twitter:card content="summary_large_image">
@@ -27,7 +27,7 @@
 <body class=not-ready data-menu=true>
 <header class=header>
 <p class=logo>
-<a class=site-name href=https://marcellogalhardo.dev/>Marcello Galhardo</a><a class=btn-dark></a>
+<a class=site-name href=https://marcellogalhardo.dev/>Marcello</a><a class=btn-dark></a>
 </p>
 <script>let bodyClx=document.body.classList,btnDark=document.querySelector('.btn-dark'),sysDark=window.matchMedia('(prefers-color-scheme: dark)'),darkVal=localStorage.getItem('dark'),setDark=a=>{bodyClx[a?'add':'remove']('dark'),localStorage.setItem('dark',a?'yes':'no')};setDark(darkVal?darkVal==='yes':sysDark.matches),requestAnimationFrame(()=>bodyClx.remove('not-ready')),btnDark.addEventListener('click',()=>setDark(!bodyClx.contains('dark'))),sysDark.addEventListener('change',a=>setDark(a.matches))</script>
 <nav class=menu>
