--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<title>About - Marcello Galhardo</title>
+<title>About - Marcello</title>
 <meta name=description content="Software engineer with over 6 years of experience with Android. I have been building software professionally since 2012, starting on Web and Backend, later on Desktop, and finally, on Android. I worked with small teams at Quandoo, to dozens of engineers working on the same codebase at N26 and Delivery Hero. At N26, I worked on the Consumer App and later led the Android Platform Team. The apps I worked on had millions of downloads used in more than 20 countries.">
 <meta name=author content>
 <link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/app.min.css>
@@ -19,7 +19,7 @@
 <meta property="og:description" content="Software engineer with over 6 years of experience with Android. I have been building software professionally since 2012, starting on Web and Backend, later on Desktop, and finally, on Android. I worked with small teams at Quandoo, to dozens of engineers working on the same codebase at N26 and Delivery Hero. At N26, I worked on the Consumer App and later led the Android Platform Team. The apps I worked on had millions of downloads used in more than 20 countries.">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://marcellogalhardo.dev/about/"><meta property="og:image" content="https://marcellogalhardo.dev/"><meta property="article:section" content>
-<meta property="og:site_name" content="Marcello Galhardo">
+<meta property="og:site_name" content="Marcello">
 <meta itemprop=name content="About">
 <meta itemprop=description content="Software engineer with over 6 years of experience with Android. I have been building software professionally since 2012, starting on Web and Backend, later on Desktop, and finally, on Android. I worked with small teams at Quandoo, to dozens of engineers working on the same codebase at N26 and Delivery Hero. At N26, I worked on the Consumer App and later led the Android Platform Team. The apps I worked on had millions of downloads used in more than 20 countries.">
 <meta itemprop=wordCount content="107"><meta itemprop=image content="https://marcellogalhardo.dev/">
@@ -32,7 +32,7 @@
 <body class=not-ready data-menu=true>
 <header class=header>
 <p class=logo>
-<a class=site-name href=https://marcellogalhardo.dev/>Marcello Galhardo</a><a class=btn-dark></a>
+<a class=site-name href=https://marcellogalhardo.dev/>Marcello</a><a class=btn-dark></a>
 </p>
 <script>let bodyClx=document.body.classList,btnDark=document.querySelector('.btn-dark'),sysDark=window.matchMedia('(prefers-color-scheme: dark)'),darkVal=localStorage.getItem('dark'),setDark=a=>{bodyClx[a?'add':'remove']('dark'),localStorage.setItem('dark',a?'yes':'no')};setDark(darkVal?darkVal==='yes':sysDark.matches),requestAnimationFrame(()=>bodyClx.remove('not-ready')),btnDark.addEventListener('click',()=>setDark(!bodyClx.contains('dark'))),sysDark.addEventListener('change',a=>setDark(a.matches))</script>
 <nav class=menu>
