--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<title>Marcello Galhardo</title>
+<title>Marcello</title>
 <meta name=description content>
 <meta name=author content>
 <link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/app.min.css>
@@ -11,24 +11,24 @@
 <link rel=icon href=https://marcellogalhardo.dev/favicon.ico>
 <link rel=apple-touch-icon href=https://marcellogalhardo.dev/apple-touch-icon.png>
 <meta name=generator content="Hugo 0.88.1">
-<link rel=alternate type=application/rss+xml href=https://marcellogalhardo.dev/index.xml title="Marcello Galhardo">
+<link rel=alternate type=application/rss+xml href=https://marcellogalhardo.dev/index.xml title=Marcello>
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-7LK7ENB813','auto'),ga('send','pageview'))</script>
 <script async src=https://www.google-analytics.com/analytics.js></script>
-<meta property="og:title" content="Marcello Galhardo">
+<meta property="og:title" content="Marcello">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://marcellogalhardo.dev/"><meta property="og:image" content="https://marcellogalhardo.dev/"><meta property="og:site_name" content="Marcello Galhardo">
-<meta itemprop=name content="Marcello Galhardo">
+<meta property="og:url" content="https://marcellogalhardo.dev/"><meta property="og:image" content="https://marcellogalhardo.dev/"><meta property="og:site_name" content="Marcello">
+<meta itemprop=name content="Marcello">
 <meta itemprop=description content>
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://marcellogalhardo.dev/">
-<meta name=twitter:title content="Marcello Galhardo">
+<meta name=twitter:title content="Marcello">
 <meta name=twitter:description content>
 </head>
 <body class=not-ready data-menu=true>
 <header class=header>
 <h1 class=logo>
-<a class=site-name href=https://marcellogalhardo.dev/>Marcello Galhardo</a><a class=btn-dark></a>
+<a class=site-name href=https://marcellogalhardo.dev/>Marcello</a><a class=btn-dark></a>
 </h1>
 <script>let bodyClx=document.body.classList,btnDark=document.querySelector('.btn-dark'),sysDark=window.matchMedia('(prefers-color-scheme: dark)'),darkVal=localStorage.getItem('dark'),setDark=a=>{bodyClx[a?'add':'remove']('dark'),localStorage.setItem('dark',a?'yes':'no')};setDark(darkVal?darkVal==='yes':sysDark.matches),requestAnimationFrame(()=>bodyClx.remove('not-ready')),btnDark.addEventListener('click',()=>setDark(!bodyClx.contains('dark'))),sysDark.addEventListener('change',a=>setDark(a.matches))</script>
 <nav class=menu>
@@ -39,7 +39,7 @@
 </nav>
 </header>
 <main class=main>
-<h1 class=main-title>Marcello Galhardo</h1>
+<h1 class=main-title>Marcello</h1>
 <article class=post-entry>
 <h2>Using Compose Beta on AS 4.1</h2>
 <time>Mar 30, 2021</time>
