--- a/uses/index.html
+++ b/uses/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<title>Uses - Marcello Galhardo</title>
+<title>Uses - Marcello</title>
 <meta name=description content="Hardware  Professional Machine: 2020 13&#34; Macbook Pro Mechanical Keyboard: Keychron K2 Wireless Mechanical Keyboard Apple Magic Mouse  Ergonomics  Chair: JÄRVFJÄLLET  Software  File Manager: Marta Window Manager: Tiles Diagrams: Diagrams IDE: IntelliJ IDEA Daily Planner: Sunsama  ">
 <meta name=author content>
 <link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/app.min.css>
@@ -19,7 +19,7 @@
 <meta property="og:description" content="Hardware  Professional Machine: 2020 13&#34; Macbook Pro Mechanical Keyboard: Keychron K2 Wireless Mechanical Keyboard Apple Magic Mouse  Ergonomics  Chair: JÄRVFJÄLLET  Software  File Manager: Marta Window Manager: Tiles Diagrams: Diagrams IDE: IntelliJ IDEA Daily Planner: Sunsama  ">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://marcellogalhardo.dev/uses/"><meta property="og:image" content="https://marcellogalhardo.dev/"><meta property="article:section" content>
-<meta property="og:site_name" content="Marcello Galhardo">
+<meta property="og:site_name" content="Marcello">
 <meta itemprop=name content="Uses">
 <meta itemprop=description content="Hardware  Professional Machine: 2020 13&#34; Macbook Pro Mechanical Keyboard: Keychron K2 Wireless Mechanical Keyboard Apple Magic Mouse  Ergonomics  Chair: JÄRVFJÄLLET  Software  File Manager: Marta Window Manager: Tiles Diagrams: Diagrams IDE: IntelliJ IDEA Daily Planner: Sunsama  ">
 <meta itemprop=wordCount content="35"><meta itemprop=image content="https://marcellogalhardo.dev/">
@@ -32,7 +32,7 @@
 <body class=not-ready data-menu=true>
 <header class=header>
 <p class=logo>
-<a class=site-name href=https://marcellogalhardo.dev/>Marcello Galhardo</a><a class=btn-dark></a>
+<a class=site-name href=https://marcellogalhardo.dev/>Marcello</a><a class=btn-dark></a>
 </p>
 <script>let bodyClx=document.body.classList,btnDark=document.querySelector('.btn-dark'),sysDark=window.matchMedia('(prefers-color-scheme: dark)'),darkVal=localStorage.getItem('dark'),setDark=a=>{bodyClx[a?'add':'remove']('dark'),localStorage.setItem('dark',a?'yes':'no')};setDark(darkVal?darkVal==='yes':sysDark.matches),requestAnimationFrame(()=>bodyClx.remove('not-ready')),btnDark.addEventListener('click',()=>setDark(!bodyClx.contains('dark'))),sysDark.addEventListener('change',a=>setDark(a.matches))</script>
 <nav class=menu>
