--- a/uses/index.html
+++ b/uses/index.html
@@ -1,25 +1,19 @@
-<!doctype html><html lang=en-us>
+<!doctype html><html lang=en>
 <head>
 <meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge">
+<meta http-equiv=x-ua-compatible content="ie=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<title>Uses - Marcello</title>
-<meta name=description content="Hardware  Professional Machine: 2020 13&#34; Macbook Pro Mechanical Keyboard: Keychron K2 Wireless Mechanical Keyboard Apple Magic Mouse  Ergonomics  Chair: JÄRVFJÄLLET  Software  File Manager: Marta Window Manager: Tiles Diagrams: Diagrams IDE: IntelliJ IDEA Daily Planner: Sunsama  ">
 <meta name=author content>
-<link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/app.min.css>
-<link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/an-old-hope.min.css>
-<script defer src=https://marcellogalhardo.dev/highlight.min.js onload=hljs.initHighlightingOnLoad()></script>
-<link rel=preload as=image href=https://marcellogalhardo.dev/theme.png>
-<link rel=icon href=https://marcellogalhardo.dev/favicon.ico>
-<link rel=apple-touch-icon href=https://marcellogalhardo.dev/apple-touch-icon.png>
-<meta name=generator content="Hugo 0.88.1">
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-7LK7ENB813','auto'),ga('send','pageview'))</script>
-<script async src=https://www.google-analytics.com/analytics.js></script>
-<meta property="og:title" content="Uses">
-<meta property="og:description" content="Hardware  Professional Machine: 2020 13&#34; Macbook Pro Mechanical Keyboard: Keychron K2 Wireless Mechanical Keyboard Apple Magic Mouse  Ergonomics  Chair: JÄRVFJÄLLET  Software  File Manager: Marta Window Manager: Tiles Diagrams: Diagrams IDE: IntelliJ IDEA Daily Planner: Sunsama  ">
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://marcellogalhardo.dev/uses/"><meta property="og:image" content="https://marcellogalhardo.dev/"><meta property="article:section" content>
-<meta property="og:site_name" content="Marcello">
+<meta name=description content="Hardware  Professional Machine: 2020 13&amp;quot; Macbook Pro Mechanical Keyboard: Keychron K2 Wireless Mechanical Keyboard Apple Magic Mouse  Ergonomics  Chair: JÄRVFJÄLLET  Software  File Manager: Marta Window Manager: Tiles Diagrams: Diagrams IDE: IntelliJ IDEA Daily Planner: Sunsama  ">
+<meta name=keywords content>
+<meta name=robots content="noodp">
+<meta name=theme-color content>
+<link rel=canonical href=https://marcellogalhardo.dev/uses/>
+<title>
+Uses :: Marcello — Software Engineer (Android)
+</title>
+<link href=https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css rel=stylesheet type=text/css>
+<link rel=stylesheet href=/main.29c2c8c3fc9cf748254138351f142ac2833b208a68e83aec126edc98b59efef2.css>
 <meta itemprop=name content="Uses">
 <meta itemprop=description content="Hardware  Professional Machine: 2020 13&#34; Macbook Pro Mechanical Keyboard: Keychron K2 Wireless Mechanical Keyboard Apple Magic Mouse  Ergonomics  Chair: JÄRVFJÄLLET  Software  File Manager: Marta Window Manager: Tiles Diagrams: Diagrams IDE: IntelliJ IDEA Daily Planner: Sunsama  ">
 <meta itemprop=wordCount content="35"><meta itemprop=image content="https://marcellogalhardo.dev/">
@@ -28,29 +22,40 @@
 <meta name=twitter:image content="https://marcellogalhardo.dev/">
 <meta name=twitter:title content="Uses">
 <meta name=twitter:description content="Hardware  Professional Machine: 2020 13&#34; Macbook Pro Mechanical Keyboard: Keychron K2 Wireless Mechanical Keyboard Apple Magic Mouse  Ergonomics  Chair: JÄRVFJÄLLET  Software  File Manager: Marta Window Manager: Tiles Diagrams: Diagrams IDE: IntelliJ IDEA Daily Planner: Sunsama  ">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7LK7ENB813"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-7LK7ENB813',{anonymize_ip:!1})}</script>
 </head>
-<body class=not-ready data-menu=true>
+<body>
+<div class=container>
 <header class=header>
-<p class=logo>
-<a class=site-name href=https://marcellogalhardo.dev/>Marcello</a><a class=btn-dark></a>
-</p>
-<script>let bodyClx=document.body.classList,btnDark=document.querySelector('.btn-dark'),sysDark=window.matchMedia('(prefers-color-scheme: dark)'),darkVal=localStorage.getItem('dark'),setDark=a=>{bodyClx[a?'add':'remove']('dark'),localStorage.setItem('dark',a?'yes':'no')};setDark(darkVal?darkVal==='yes':sysDark.matches),requestAnimationFrame(()=>bodyClx.remove('not-ready')),btnDark.addEventListener('click',()=>setDark(!bodyClx.contains('dark'))),sysDark.addEventListener('change',a=>setDark(a.matches))</script>
+<span class=header__inner>
+<a href=/ style=text-decoration:none>
+<div class=logo>
+<span class=logo__mark>></span>
+<span class=logo__text>marcellogalhardo.dev</span>
+<span class=logo__cursor>
+</span>
+</div>
+</a>
+<span class=header__right>
 <nav class=menu>
-<a href=/posts/>Posts</a>
-<a href=/talks>Talks</a>
-<a href=/about>About</a>
-<a href=/uses>Uses</a>
+<ul class=menu__inner><li><a href=/posts/>Posts</a></li><li><a href=/talks>Talks</a></li><li><a href=/about>About</a></li><li><a href=/uses>Uses</a></li>
+</ul>
 </nav>
+<span class=menu-trigger><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>
+</span>
+</span>
+</span>
 </header>
-<main class=main>
-<article class=post-single>
-<header class=post-title>
-<p>
-<time>Jan 1, 1</time>
+<div class=content>
+<main class=post>
+<div class=post-info>
 </p>
-<h1>Uses</h1>
-</header>
-<section class=post-content><h3 id=hardware>Hardware</h3>
+</div>
+<article>
+<h2 class=post-title><a href=https://marcellogalhardo.dev/uses/>Uses</a></h2>
+<div class=post-content>
+<h3 id=hardware>Hardware</h3>
 <ul>
 <li>Professional Machine: 2020 13" Macbook Pro</li>
 <li>Mechanical Keyboard: <a href=https://www.keychron.com/products/keychron-k2-wireless-mechanical-keyboard>Keychron K2 Wireless Mechanical Keyboard</a></li>
@@ -68,9 +73,13 @@
 <li>IDE: <a href=https://www.jetbrains.com/idea>IntelliJ IDEA</a></li>
 <li>Daily Planner: <a href=https://sunsama.com>Sunsama</a></li>
 </ul>
-</section>
+</div>
 </article>
+<hr>
+<div class=post-info>
+</div>
 </main>
+</div>
 <footer class=footer>
 <div class=footer__inner>
 <div class=footer__content>
@@ -79,5 +88,7 @@
 </div>
 </div>
 </footer>
+</div>
+<script type=text/javascript src=/bundle.min.599099f1f14b78b657d524b28e10e0c5098e7cd46e9c7aed73d577068a276c3ff1bb234cbf29cb313333e83cf411727b43157c91ce5b809e2ffc81664614608e.js integrity="sha512-WZCZ8fFLeLZX1SSyjhDgxQmOfNRunHrtc9V3BoonbD/xuyNMvynLMTMz6Dz0EXJ7QxV8kc5bgJ4v/IFmRhRgjg=="></script>
 </body>
 </html>
