deploy: marcellogalhardo/marcellogalhardo.dev@7bd820967719fa7254da1dfa658d743343946af6

--- a/index.html
+++ b/index.html
@@ -1,59 +1,71 @@
-<!doctype html><html lang=en>
+<!doctype html><html lang=en-us>
 <head>
-<meta name=generator content="Hugo 0.88.1">
 <meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="ie=edge">
+<meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<meta name=author content>
+<title>Marcello</title>
 <meta name=description content>
-<meta name=keywords content>
-<meta name=robots content="noodp">
-<meta name=theme-color content>
-<link rel=canonical href=https://marcellogalhardo.dev/>
-<title>
-Marcello — Software Engineer (Android)
-</title>
-<link href=https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css rel=stylesheet type=text/css>
-<link rel=stylesheet href=/main.29c2c8c3fc9cf748254138351f142ac2833b208a68e83aec126edc98b59efef2.css>
+<meta name=author content>
+<link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/app.min.css>
+<link rel=preload as=image href=https://marcellogalhardo.dev/theme.png>
+<link rel=icon href=https://marcellogalhardo.dev/favicon.ico>
+<link rel=apple-touch-icon href=https://marcellogalhardo.dev/apple-touch-icon.png>
+<meta name=generator content="Hugo 0.88.1">
+<link rel=alternate type=application/rss+xml href=https://marcellogalhardo.dev/index.xml title=Marcello>
+<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-7LK7ENB813','auto'),ga('send','pageview'))</script>
+<script async src=https://www.google-analytics.com/analytics.js></script>
+<meta property="og:title" content="Marcello">
+<meta property="og:description" content>
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://marcellogalhardo.dev/"><meta property="og:image" content="https://marcellogalhardo.dev/"><meta property="og:site_name" content="Marcello">
 <meta itemprop=name content="Marcello">
 <meta itemprop=description content>
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://marcellogalhardo.dev/">
 <meta name=twitter:title content="Marcello">
 <meta name=twitter:description content>
-<link rel=alternate type=application/rss+xml href=https://marcellogalhardo.dev/index.xml title=Marcello>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7LK7ENB813"></script>
-<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-7LK7ENB813',{anonymize_ip:!1})}</script>
 </head>
-<body>
-<div class=container>
+<body class=not-ready data-menu=true>
 <header class=header>
-<span class=header__inner>
-<a href=/ style=text-decoration:none>
-<div class=logo>
-<span class=logo__mark>></span>
-<span class=logo__text>marcellogalhardo.dev</span>
-<span class=logo__cursor>
-</span>
-</div>
-</a>
-<span class=header__right>
+<h1 class=logo>
+<a class=site-name href=https://marcellogalhardo.dev/>Marcello</a><a class=btn-dark></a>
+</h1>
+<script>let bodyClx=document.body.classList,btnDark=document.querySelector('.btn-dark'),sysDark=window.matchMedia('(prefers-color-scheme: dark)'),darkVal=localStorage.getItem('dark'),setDark=a=>{bodyClx[a?'add':'remove']('dark'),localStorage.setItem('dark',a?'yes':'no')};setDark(darkVal?darkVal==='yes':sysDark.matches),requestAnimationFrame(()=>bodyClx.remove('not-ready')),btnDark.addEventListener('click',()=>setDark(!bodyClx.contains('dark'))),sysDark.addEventListener('change',a=>setDark(a.matches))</script>
 <nav class=menu>
-<ul class=menu__inner><li><a href=/posts/>Posts</a></li><li><a href=/talks>Talks</a></li><li><a href=/about>About</a></li><li><a href=/uses>Uses</a></li>
-</ul>
+<a href=/posts/>Posts</a>
+<a href=/talks>Talks</a>
+<a href=/about>About</a>
+<a href=/uses>Uses</a>
 </nav>
-<span class=menu-trigger><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>
-</span>
-</span>
-</span>
 </header>
-<div class=content>
-<main aria-role=main>
-<div>
-<h1>Marcello</h1>
-</div>
+<main class=main>
+<h1 class=main-title>Marcello</h1>
+<article class=post-entry>
+<h2>Deep Models</h2>
+<time>Oct 7, 2021</time>
+<a href=https://marcellogalhardo.dev/posts/2021/10/07/deep-models/></a>
+</article>
+<article class=post-entry>
+<h2>Using Compose Beta on AS 4.1</h2>
+<time>Mar 30, 2021</time>
+<a href=https://marcellogalhardo.dev/posts/2021/03/30/using-compose-beta-on-as-4-1/></a>
+</article>
+<article class=post-entry>
+<h2>N26 Path to Anvil</h2>
+<time>Feb 5, 2021</time>
+<a href=https://marcellogalhardo.dev/posts/2021/02/05/n26-path-to-anvil/></a>
+</article>
+<article class=post-entry>
+<h2>Humble Views, Proud ViewModels</h2>
+<time>Feb 1, 2021</time>
+<a href=https://marcellogalhardo.dev/posts/2021/02/01/humble-views-proud-viewmodels/></a>
+</article>
+<article class=post-entry>
+<h2>Naming Factory Methods</h2>
+<time>Feb 1, 2020</time>
+<a href=https://marcellogalhardo.dev/posts/2020/02/01/naming-factory-methods/></a>
+</article>
 </main>
-</div>
 <footer class=footer>
 <div class=footer__inner>
 <div class=footer__content>
@@ -62,7 +74,5 @@ Marcello — Software Engineer (Android)
 </div>
 </div>
 </footer>
-</div>
-<script type=text/javascript src=/bundle.min.599099f1f14b78b657d524b28e10e0c5098e7cd46e9c7aed73d577068a276c3ff1bb234cbf29cb313333e83cf411727b43157c91ce5b809e2ffc81664614608e.js integrity="sha512-WZCZ8fFLeLZX1SSyjhDgxQmOfNRunHrtc9V3BoonbD/xuyNMvynLMTMz6Dz0EXJ7QxV8kc5bgJ4v/IFmRhRgjg=="></script>
 </body>
 </html>
