--- a/404.html
+++ b/404.html
@@ -8,6 +8,8 @@
 <meta name=author content>
 <link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/app.min.css>
 <link rel=preload as=image href=https://marcellogalhardo.dev/theme.png>
+<link rel=preload as=image href=https://marcellogalhardo.dev/twitter.svg>
+<link rel=preload as=image href=https://marcellogalhardo.dev/github.svg>
 <link rel=icon href=https://marcellogalhardo.dev/favicon.ico>
 <link rel=apple-touch-icon href=https://marcellogalhardo.dev/apple-touch-icon.png>
 <meta name=generator content="Hugo 0.88.1">
@@ -35,6 +37,10 @@
 <a href=/talks>Talks</a>
 <a href=/about>About</a>
 <a href=/uses>Uses</a>
+</nav>
+<nav class=social>
+<a class=twitter style=--url:url(./twitter.svg) href=https://twitter.com/https://twitter.com/marcellogalhard target=_blank></a>
+<a class=github style=--url:url(./github.svg) href=https://github.com/https://github.com/marcellogalhardo target=_blank></a>
 </nav>
 </header>
 <main class=main>
