deploy: marcellogalhardo/marcellogalhardo.dev@68b4dd7cdd87ac01aa924ae9b198c34cd432c7fe

--- a/index.html
+++ b/index.html
@@ -1,76 +1,91 @@
-<!doctype html><html lang=en-us>
-<head>
-<meta charset=utf-8>
+<!doctype html><html lang=en dir=auto>
+<head><meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
+<meta name=robots content="index, follow">
 <title>Marcello</title>
 <meta name=description content>
 <meta name=author content>
-<link rel="preload stylesheet" as=style href=https://marcellogalhardo.dev/app.min.css>
-<link rel=preload as=image href=https://marcellogalhardo.dev/theme.png>
-<link rel=preload as=image href=https://marcellogalhardo.dev/twitter.svg>
-<link rel=preload as=image href=https://marcellogalhardo.dev/github.svg>
+<link rel=canonical href=https://marcellogalhardo.dev/>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw+W8mWdq36u97PLc=" rel="preload stylesheet" as=style>
+<link rel=preload href="https://avatars.githubusercontent.com/u/4348197?s=400&u=c27e3f938a61471e2eebc00d6c8ab8826b0af816&v=4" as=image>
 <link rel=icon href=https://marcellogalhardo.dev/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=https://marcellogalhardo.dev/favicon-16x16.png>
+<link rel=icon type=image/png sizes=32x32 href=https://marcellogalhardo.dev/favicon-32x32.png>
 <link rel=apple-touch-icon href=https://marcellogalhardo.dev/apple-touch-icon.png>
+<link rel=mask-icon href=https://marcellogalhardo.dev/safari-pinned-tab.svg>
+<meta name=theme-color content="#2e2e33">
+<meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.88.1">
-<link rel=alternate type=application/rss+xml href=https://marcellogalhardo.dev/index.xml title=Marcello>
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-7LK7ENB813','auto'),ga('send','pageview'))</script>
-<script async src=https://www.google-analytics.com/analytics.js></script>
+<link rel=alternate type=application/rss+xml href=https://marcellogalhardo.dev/index.xml>
+<noscript>
+<style>#theme-toggle,.top-link{display:none}</style>
+<style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
+</noscript>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7LK7ENB813"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-7LK7ENB813',{anonymize_ip:!1})}</script>
 <meta property="og:title" content="Marcello">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://marcellogalhardo.dev/"><meta property="og:image" content="https://marcellogalhardo.dev/"><meta property="og:site_name" content="Marcello">
-<meta itemprop=name content="Marcello">
-<meta itemprop=description content>
-<meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://marcellogalhardo.dev/">
+<meta property="og:url" content="https://marcellogalhardo.dev/"><meta property="og:site_name" content="Marcello">
+<meta name=twitter:card content="summary">
 <meta name=twitter:title content="Marcello">
 <meta name=twitter:description content>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Marcello","url":"https://marcellogalhardo.dev/","description":"","thumbnailUrl":"https://marcellogalhardo.dev/favicon.ico","sameAs":["https://twitter.com/marcellogalhard","https://github.com/marcellogalhardo/","https://www.linkedin.com/in/marcellogalhardo/"]}</script>
 </head>
-<body class=not-ready data-menu=true>
+<body class=list id=top>
+<script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
-<h1 class=logo>
-<a class=site-name href=https://marcellogalhardo.dev/>Marcello</a><a class=btn-dark></a>
-</h1>
-<script>let bodyClx=document.body.classList,btnDark=document.querySelector('.btn-dark'),sysDark=window.matchMedia('(prefers-color-scheme: dark)'),darkVal=localStorage.getItem('dark'),setDark=a=>{bodyClx[a?'add':'remove']('dark'),localStorage.setItem('dark',a?'yes':'no')};setDark(darkVal?darkVal==='yes':sysDark.matches),requestAnimationFrame(()=>bodyClx.remove('not-ready')),btnDark.addEventListener('click',()=>setDark(!bodyClx.contains('dark'))),sysDark.addEventListener('change',a=>setDark(a.matches))</script>
-<nav class=menu>
-<a href=/posts/>Posts</a>
-<a href=/talks>Talks</a>
-<a href=/about>About</a>
-<a href=/uses>Uses</a>
-</nav>
-<nav class=social>
-<a class=twitter style=--url:url(./twitter.svg) href=https://twitter.com/https://twitter.com/marcellogalhard target=_blank></a>
-<a class=github style=--url:url(./github.svg) href=https://github.com/https://github.com/marcellogalhardo target=_blank></a>
+<nav class=nav>
+<div class=logo>
+<a href=https://marcellogalhardo.dev/ accesskey=h title="Marcello (Alt + H)">Marcello</a>
+<span class=logo-switches>
+<button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
+</button>
+</span>
+</div>
+<ul id=menu>
+<li>
+<a href=https://marcellogalhardo.dev/posts/ title=Posts>
+<span>Posts</span>
+</a>
+</li>
+<li>
+<a href=https://marcellogalhardo.dev/talks title=Talks>
+<span>Talks</span>
+</a>
+</li>
+<li>
+<a href=https://marcellogalhardo.dev/about title=About>
+<span>About</span>
+</a>
+</li>
+<li>
+<a href=https://marcellogalhardo.dev/uses title=Uses>
+<span>Uses</span>
+</a>
+</li>
+</ul>
 </nav>
 </header>
-<main class=main>
-<h1 class=main-title>Marcello</h1>
-<article class=post-entry>
-<h2>Deep Models</h2>
-<time>Oct 7, 2021</time>
-<a href=https://marcellogalhardo.dev/posts/2021/10/07/deep-models/></a>
-</article>
-<article class=post-entry>
-<h2>Using Compose Beta on AS 4.1</h2>
-<time>Mar 30, 2021</time>
-<a href=https://marcellogalhardo.dev/posts/2021/03/30/using-compose-beta-on-as-4-1/></a>
-</article>
-<article class=post-entry>
-<h2>N26 Path to Anvil</h2>
-<time>Feb 5, 2021</time>
-<a href=https://marcellogalhardo.dev/posts/2021/02/05/n26-path-to-anvil/></a>
-</article>
-<article class=post-entry>
-<h2>Humble Views, Proud ViewModels</h2>
-<time>Feb 1, 2021</time>
-<a href=https://marcellogalhardo.dev/posts/2021/02/01/humble-views-proud-viewmodels/></a>
-</article>
-<article class=post-entry>
-<h2>Naming Factory Methods</h2>
-<time>Feb 1, 2020</time>
-<a href=https://marcellogalhardo.dev/posts/2020/02/01/naming-factory-methods/></a>
-</article>
+<main class=main><div class=profile>
+<div class=profile_inner><img src="https://avatars.githubusercontent.com/u/4348197?s=400&u=c27e3f938a61471e2eebc00d6c8ab8826b0af816&v=4" alt="Profile Picture" height=120 width=120>
+<h1>Marcello Galhardo</h1>
+<span>Software Engineer (Android)</span><div class=social-icons>
+<a href=https://twitter.com/marcellogalhard target=_blank rel="noopener noreferrer me" title=Twitter><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9.0 01-3.14 1.53 4.48 4.48.0 00-7.86 3v1A10.66 10.66.0 013 4s-4 9 5 13a11.64 11.64.0 01-7 2c9 5 20 0 20-11.5a4.5 4.5.0 00-.08-.83A7.72 7.72.0 0023 3z"/></svg>
+</a>
+<a href=https://github.com/marcellogalhardo/ target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
+</a>
+<a href=https://www.linkedin.com/in/marcellogalhardo/ target=_blank rel="noopener noreferrer me" title=Linkedin><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
+</a>
+</div>
+<div class=buttons>
+<a class=button href=/posts rel=noopener title=Posts>
+<span class=button-inner>Posts</span>
+</a>
+</div>
+</div>
+</div>
 </main>
 <footer class=footer>
 <div class=footer__inner>
