deploy: marcellogalhardo/marcellogalhardo.dev@fc532c271dd752250716bae5e76b1272e7cc3fad

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <link rel=alternate type=application/rss+xml href=https://marcellogalhardo.dev/index.xml>
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
+<style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
 </noscript>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7LK7ENB813"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-7LK7ENB813',{anonymize_ip:!1})}</script>
@@ -32,8 +33,8 @@
 <meta name=twitter:description content>
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Marcello","url":"https://marcellogalhardo.dev/","description":"","thumbnailUrl":"https://marcellogalhardo.dev/favicon.ico","sameAs":["https://twitter.com/marcellogalhard","https://github.com/marcellogalhardo/","https://www.linkedin.com/in/marcellogalhardo/"]}</script>
 </head>
-<body class="list dark" id=top>
-<script>localStorage.getItem("pref-theme")==="light"&&document.body.classList.remove('dark')</script>
+<body class=list id=top>
+<script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
 <nav class=nav>
 <div class=logo>
